samples/_failures_safe/1761271985_78cdb0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1a37ebf.c: In function ‘main’:
./samples/SAFE/__tmp_a1a37ebf.c:154:20: error: missing terminating " character
  154 |             printf("%3d:%-3d  %-11s  %s\n
      |                    ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a1a37ebf.c:154:13: error: expected expression at end of input
  154 |             printf("%3d:%-3d  %-11s  %s\n
      |             ^~~~~~
./samples/SAFE/__tmp_a1a37ebf.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a1a37ebf.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a1a37ebf.c:154:13: error: expected declaration or statement at end of input
